--- a/README
+++ b/README
@@ -53,6 +53,9 @@ dns:
     geoip: true
     ipcidr:
      - 240.0.0.0/4
-     
+之后电脑重启需要先打开软件，再开启热点，不然总有一点小问题
+
+
+
 如果想还原设置，正常使用热点，需要点击
 windows控制面板->网络和Internet->查看网络任务和状态->更改适配器选项->禁用热点网卡，再重新开启热点即可。
